-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-aarch32-8, port-stage-aarch32-9
-
Component/s: hotspot
-
None
-
aarch32
-
linux
cmd to reproduce:
java -Xint -agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=y HelloWorld
generates a SIGILL
java -Xint -agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=y HelloWorld
generates a SIGILL